2005-12-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/makefile.nt: Fixes for linking with bgd.dll.

	* src/term.c: #include <io.h> for __MSC__.

2005-12-11  Ethan Merritt  <merritt@u.washington.edu>

        * src/graph3d.c (do_3dplot): Add a BoundingBox structure to describe
	the plot boundaries in 'set view map' mode.

2005-12-06  Ethan Merritt  <merritt@u.washington.edu>

        * src/graph3d.c (do_3dplot) src/graph3d.h src/plot3d.c (eval_3dplots)
	src/hidden3d.c (build_networks) docs/gnuplot.doc:   Add an option
	`with <plotstyle> nohidden3d` that allows you to exclude a particular
	plot from the global `set hidden3d` processing.

2005-12-06  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        * src/hidden3d.c (COORD_TO_TREECELL, COORD_TO_BITMASK): Avoid
        overflow by undoing effect of surface_scale before mapping to
        integers.
        (store_polygon): Add assert()s to internal macros GET_MIN,
        GET_MAX, to catch problems not handled by above changes.
        (in_front): Avoid accessing qlist[-1].  Make sure
        p_list[] is always filled, even if doing a single-vertex pseudo
        edge.

2005-12-05  Ethan Merritt  <merritt@u.washington.edu>

        * src/hidden3d.c (build_networks):  Each plot with style LABELPOINTS
        contains a linked list of labels. But the first label in this list is
        a dummy entry used only as a placeholder for style parameters. The
        hidden3d code was incorrectly counting this as an actual label.
        Fixes at least some instances of bug #1372464.

2005-12-04  Ethan Merritt  <merritt@u.washington.edu>

        * src/gadgets.h: Add new internal linetype LT_COLORFROMCOLUMN

        * src/graph3d.c (do_3dplot): Remove warning if no surface is visible
        in plot with hidden3d set.

        * src/hidden3d.c src/util3d.h: Modify struct vertex so that it contains
        a pointer (lp_style_type *)lp rather than simply an (int)style. This