@@ -1,3 +1,8 @@
+2005-12-15  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* term/win.trm (WIN_set_color) src/win/wgraph.c (drawgraph): Support for
+	text color via RGB and via linetype color values.
+
 2005-12-14  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* config/makefile.nt: Fixes for linking with bgd.dll.
